--- a/frontend/web/css/base.css
+++ b/frontend/web/css/base.css
@@ -1094,4 +1094,66 @@ aside.slide-wrapper li.current > a {
     -o-flex-wrap: nowrap;
     flex-wrap: nowrap;
 }
+.pwd_mask{
+    position:fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background: rgba(0,0,0,.7);
+    padding: 100px 12px 0 12px;
+    z-index: 99999;
+    display: none;
+}
+.pwd_content{
+    background: #fff;
+    border-radius: 4px;
+}   
+.pwd_title{
+    font-size: 18px;
+    color: #000;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 14px;
+    font-weight: 400;
+}
+.pwd_section{
+    border-top: 1px solid #ccc;
+    padding: 14px;
+}
+.pwd_section input{
+    width: 100%;
+    height: 34px;
+    border: 1px solid #eae8e8;
+    color: #727272;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 0 14px;
+    box-sizing: border-box;
+}
+.pwd_tip{
+    text-align: right;
+    margin-top: 14px;
+}
+.pwd_tip a{
+    font-size: 14px;
+    color: #CD0000;
+}
+.pwd_submit{
+    display: block;
+    width: 100%;
+    background-color: rgb(245, 73, 61);
+    border-color: rgb(245, 73, 61);
+    height: 34px;
+    line-height: 34px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+}
+
+
+
+
+
 
