--- a/frontend/web/css/base.css
+++ b/frontend/web/css/base.css
@@ -943,7 +943,7 @@ html {
 
 /*底部*/
 
-.page-footer {
+/*.page-footer {
     width: 100%;
     height: 1.5rem;
     background-color: #fff;
@@ -998,7 +998,7 @@ html {
 
 .page-footer ul .active i {
     color: #f44623;
-}
+}*/
 
 
 
