--- a/frontend/web/css/common.css
+++ b/frontend/web/css/common.css
@@ -17,13 +17,27 @@ footer{
     position: fixed;
     bottom: 0;
     left: 0;
-    background: #1A1B25;
+    background: #f6f6f6;
     width: 100%;
-    border-top:1px solid #343746;
+    border-top: 1px solid #ddd;
 }
-footer li{
+.flex-nowrap li p:nth-child(1) {
+    font-size: .38rem;
+    color: #999;
+}
+.flex-nowrap li.active p:nth-child(1) {
+    font-size: .38rem;
+    color: #e60213;
+}
+footer li.active a {
+    color: #e60213!important;
+}
+footer li {
     width: 100%;
-    line-height: 1.7rem;
+    line-height: 2.12rem;
+}
+.flex-nowrap li {
+    padding: .05rem;
 }
 footer li a{
     color: #5F6068;
@@ -36,40 +50,40 @@ footer li a{
     display: inline-block;
     width: 100%;
     height: 100%;
-    background: url(../images/home.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/home1.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
     text-align: center;
 }
 footer li a:hover{
     text-decoration: none;
 }
 footer li:nth-child(1).active a{
-    background: url(../images/home_2.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/home2.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(2) a{
-    background: url(../images/icon_33.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/share1.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(2).active a{
-    background: url(../images/icon_23.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/share2.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(3) a{
-    background: url(../images/cang.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/mine1.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(3).active a{
-    background: url(../images/cang_2.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background: url(../images/mine2.png) no-repeat center 0rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(4) a{
     background: url(../images/user.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background-size: .7rem .7rem;
 }
 footer li:nth-child(4).active a{
     background: url(../images/user_2.png) no-repeat center 0rem;
-    background-size: .5rem .5rem;
+    background-size: .7rem .7rem;
 }
 .flex-none{
     -moz-box-flex: none; /*Firefox*/
