--- a/frontend/web/css/common.css
+++ b/frontend/web/css/common.css
@@ -141,3 +141,53 @@ footer li:nth-child(4).active a{
     display: block;
     clear: both;
 }
+
+
+
+
+  .header {
+    padding: 0px 5px;
+    text-align: center;
+    position: relative;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    font-size: 18px;
+    color: #666;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;;
+}
+.header a {
+    display: inline-block;
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    color: #666;
+}
+.back_arrow{
+    position: relative;
+}
+.back_arrow:after,.back_arrow:before{
+    content: "";
+    position: absolute;
+    width: 12px;
+    border-top: 2px solid #666;
+    transform-origin: left;
+    -webkit-transform-origin: left;
+    top: 20px;
+    left: 10px;
+}
+.back_arrow:after{
+    transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+}
+.back_arrow:before{
+    transform:rotate(-45deg);
+    -webkit-transform:rotate(-45deg);
+}
+
+
+
+
+
+
